--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -20,7 +20,7 @@
 
     <!-- Main content -->
     <section class="content">
-
+        <a class="btn btn-default" href="@Url.Action("index", "Student")">Add new Fee</a>
         <div class="card">
             <div class="card-body">
                 <div class="dataTables_wrapper dt-bootstrap4">
