worked on Student Registration

--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -213,15 +213,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../Fee/AddFee" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Add Fee</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a href="../Fee" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Fee List</p>
+                                        <p>Fee</p>
                                     </a>
                                 </li>
 
@@ -238,9 +232,9 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../Student" class="nav-link">
+                                    <a href="../Student/Registration" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Add New</p>
+                                        <p>Registration New</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
