--- a/CRM/Views/Fee/AddFee.cshtml
+++ b/CRM/Views/Fee/AddFee.cshtml
@@ -156,9 +156,9 @@
                                     <i class="fas fa-save"></i> Save
                                 </button>
 
-                                <button class="btn btn-danger px-4">
+                                <a class="btn btn-danger px-4" href="@Url.Action("index", "Fee")">
                                     <i class="fas fa-times"></i> Exit
-                                </button>
+                                </a>
 
                             </div>
 
