--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -20,7 +20,6 @@
 
     <!-- Main content -->
     <section class="content">
-        <a class="btn btn-default" href="@Url.Action("index", "Student")">Add new Fee</a>
         <div class="card">
             <div class="card-body">
                 <div class="dataTables_wrapper dt-bootstrap4">
@@ -55,8 +54,9 @@
                                             <td>@item.Caste</td>
                                             <td>@item.MobileNoOne</td>
                                             <td>
-                                                <i class="fas fa-eye">
-                                                </i>
+                                                <a class="btn btn-default" href="@Url.Action("index", "Student")">
+                                                    <i class="fas fa-eye"></i>
+                                                </a>
                                             </td>
                                         </tr>
                                         i++;
